updated code , which generates DMG file which can then be installed on Mac OSX